--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
-    "redux-promise-middleware": "^5.0.0"
+    "redux-promise-middleware": "^5.0.0",
+    "sweetalert2": "^7.19.3",
+    "sweetalert2-react": "^0.7.2"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
